Fix favicon configuration and canonical URL typo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Astsiddhi Metal is a leading manufacturer and exporter of stainless steel pipes, tubes, plates, sheets, fasteners, and industrial raw materials. Quality products delivered globally." />
   <meta name="keywords"
     content="stainless steel pipes, steel tubes, metal supplier, industrial materials, steel manufacturer, India" />
-  <link rel="canonical" href="https://asthsidhimetal.com" />
+  <link rel="canonical" href="https://astsiddhimetal.com" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -23,7 +23,12 @@
   <meta name="twitter:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
 
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
   <!-- Structured Data -->
   <script type="application/ld+json">
