perf: optimization for pagespeed and accessibility

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     content="stainless steel pipes, steel tubes, metal supplier, industrial materials, steel manufacturer, India" />
   <link rel="canonical" href="https://astsiddhimetal.com" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Source+Sans+3:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Astsiddhi Metal - Premium Steel Products" />
