perf: reaching for 100% SEO/Accessibility and 90%+ Performance

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
   <meta property="og:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta property="og:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
+  <meta property="og:image" content="https://astsiddhimetal.com/og-image.jpg" />
+  <meta property="og:url" content="https://astsiddhimetal.com" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta name="twitter:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
+  <meta name="twitter:image" content="https://astsiddhimetal.com/og-image.jpg" />
+
+  <meta name="robots" content="index, follow" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
