--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRP4SFZDEE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SRP4SFZDEE');
+  </script>
   <title>Astsiddhi Metal - Premium Steel Products Manufacturer & Supplier</title>
   <meta name="description"
     content="Astsiddhi Metal is a leading manufacturer and exporter of stainless steel pipes, tubes, plates, sheets, fasteners, and industrial raw materials. Quality products delivered globally." />
