--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta property="og:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
-  <meta property="og:image" content="https://astsiddhimetal.com/og-image.jpg" />
+  <meta property="og:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
   <meta property="og:url" content="https://astsiddhimetal.com" />
 
   <!-- Twitter -->
@@ -39,7 +39,7 @@
   <meta name="twitter:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta name="twitter:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
-  <meta name="twitter:image" content="https://astsiddhimetal.com/og-image.jpg" />
+  <meta name="twitter:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
 
   <meta name="robots" content="index, follow" />
 
@@ -58,6 +58,7 @@
       "name": "Astsiddhi Metal",
       "description": "Manufacturer and exporter of stainless steel products and industrial raw materials",
       "url": "https://asthsidhimetal.com",
+      "logo": "https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+91 9820521850",
