--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta name="twitter:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
 
   <meta name="robots" content="index, follow" />
-
+  <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
   <link rel="shortcut icon" href="/favicon-32x32.png?v=3">
@@ -57,7 +57,7 @@
       "@type": "Organization",
       "name": "Astsiddhi Metal",
       "description": "Manufacturer and exporter of stainless steel products and industrial raw materials",
-      "url": "https://asthsidhimetal.com",
+      "url": "https://astsidhimetal.com",
       "logo": "https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png",
       "contactPoint": {
         "@type": "ContactPoint",
