--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       "@type": "Organization",
       "name": "Astsiddhi Metal",
       "description": "Manufacturer and exporter of stainless steel products and industrial raw materials",
-      "url": "https://astsidhimetal.com",
+      "url": "https://astsiddhimetal.com",
       "logo": "https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png",
       "contactPoint": {
         "@type": "ContactPoint",
