--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 
     gtag('config', 'G-SRP4SFZDEE');
   </script>
+  <script>
+    // Canonical Domain Redirection (www to non-www)
+    if (window.location.hostname === 'www.astsiddhimetal.com') {
+      window.location.replace('https://astsiddhimetal.com' + window.location.pathname + window.location.search + window.location.hash);
+    }
+  </script>
   <title>Astsiddhi Metal - Premium Steel Products Manufacturer & Supplier</title>
   <meta name="description"
     content="Astsiddhi Metal is a leading manufacturer and exporter of stainless steel pipes, tubes, plates, sheets, fasteners, and industrial raw materials. Quality products delivered globally." />
   <meta name="keywords"
     content="stainless steel pipes, steel tubes, metal supplier, industrial materials, steel manufacturer, India" />
-  <link rel="canonical" href="https://astsiddhimetal.com" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,15 +36,14 @@
   <meta property="og:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta property="og:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
-  <meta property="og:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
-  <meta property="og:url" content="https://astsiddhimetal.com" />
+  <meta property="og:image" content="https://astsiddhimetal.com/assets/logo-B40B5T-I.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Astsiddhi Metal - Premium Steel Products" />
   <meta name="twitter:description"
     content="Leading manufacturer and exporter of stainless steel products and industrial raw materials." />
-  <meta name="twitter:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
+  <meta name="twitter:image" content="https://astsiddhimetal.com/assets/logo-B40B5T-I.png" />
 
   <meta name="robots" content="index, follow" />
   <link rel="icon" href="/favicon.ico">
@@ -58,7 +62,7 @@
       "name": "Astsiddhi Metal",
       "description": "Manufacturer and exporter of stainless steel products and industrial raw materials",
       "url": "https://astsiddhimetal.com",
-      "logo": "https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png",
+      "logo": "https://astsiddhimetal.com/assets/logo-B40B5T-I.png",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+91 9820521850",
