--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <meta name="twitter:image" content="https://www.astsiddhimetal.com/assets/logo-B40B5T-I.png" />
 
   <meta name="robots" content="index, follow" />
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
   <link rel="shortcut icon" href="/favicon-32x32.png?v=3">
